--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
 }
 
 .mr-5:hover {
-  background-color: aqua;
+  background-color: hsl(206, 94%, 87%);
 }
 
 .flex-col {
@@ -50,3 +50,84 @@ body {
  span, .flex-container {
   color: white;
  }
+
+ .first-div {
+  border: solid 1px hsl(231, 11%, 63%);
+  border-radius: 5%;
+  cursor: pointer;
+ }
+ .first-div:hover {
+  background-color: hsl(231, 100%, 99%);
+ }
+
+ .first-paragraph {
+  color: hsl(231, 11%, 63%);
+  font-weight: 400;
+ }
+
+ .secomd-paragraph {
+  color: hsl(213, 96%, 18%);
+  font-weight: 700;
+ }
+
+ .switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 10px;
+  width: 10px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.input:checked + .slider {
+  background-color: #2196F3;
+}
+
+.input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+.input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
