--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 
 
 body {
-  min-height: 100vh;
-  height: 100%;
+  /* min-height: 100vh;
+  height: 100%; */
   font-family: 'Ubuntu', sans-serif;
   background-color: hsl(217, 100%, 97%);
 }
@@ -16,6 +16,10 @@ body {
   height: 30rem;
   width: 15rem;
   border-radius: 3%;
+}
+
+.white-rounding {
+  border-radius: 2%;
 }
 
 .form {
@@ -69,7 +73,7 @@ body {
   font-weight: 400;
  }
 
- .secomd-paragraph {
+ .second-paragraph {
   color: hsl(213, 96%, 18%);
   font-weight: 700;
  }
@@ -147,7 +151,7 @@ body {
 
 @media screen and (max-width: 768px) {
   body {
-    overflow: hidden;
+    overflow-x: hidden;
   }
   .selector-span, .selector-paragraph{
     visibility: hidden;
@@ -166,8 +170,8 @@ body {
   .background {
   background-image: url('./components/images/bg-sidebar-mobile.svg');
   background-size: cover;
-  height: 10rem;
-  width: 100%;
+  height: 15rem;
+  width: 15rem;
   }
 }
 
